--- a/src/pages/ApiElecciones/src/css/styles.css
+++ b/src/pages/ApiElecciones/src/css/styles.css
@@ -38,7 +38,7 @@ body {
 .input-group {
     display: flex;
     flex-direction: column;
-    /* gap: 0.5rem; */
+    gap: 0.5rem;
     margin-top: 10px;
 }
 
